--- a/index.css
+++ b/index.css
@@ -9,7 +9,8 @@
 }
 
 .hero img {
-  height: 100%;
+  min-height: 100%;
+  max-height: 500px;
   justify-self: center;
   object-fit: cover;
 }
@@ -30,7 +31,7 @@
 
 .link-buttons a {
   padding: 2rem 3rem;
-  margin: 2rem 3rem;
+  margin: 1.5rem 3rem;
   border: 0.25rem solid black;
   transition: 0.15s ease-in-out;
 }
@@ -69,5 +70,9 @@ article footer h3 {
 
   main section img {
     width: 100%;
+  }
+
+  .hero h2 {
+    font-size: 3rem;
   }
 }
